Exp-1/output/f00489_load_test.err
  File "output/f00489_load_test.py", line 3
    import assert
           ^
SyntaxError: invalid syntax
